@@ -1,3 +1,8 @@
+2015-08-22 Ben Shi <powerstudio1st AT 163 DOT com>
+	* support/regression/tests/bug-2188.c:
+	* src/SDCCast.c:
+	  Apply patch #248 by Pavel Pisa <pisa@cmp.felk.cvut.cz>.
+
 2015-08-19 Ben Shi <powerstudio1st AT 163 DOT com>
 	* configure.ac:
 	* configure:
